added more flags to tidal app, change systemd Killmode to control-group to kill all threads when being stopped

--- a/ifi-streamer-tidal-connect.service
+++ b/ifi-streamer-tidal-connect.service
@@ -6,6 +6,6 @@ ExecStart=/usr/ifi/ifi-tidal/play.sh
 User=root
 Group=root
 RestartSec=1
-KillMode=process
+KillMode=control-group
 [Install]
 WantedBy=multi-user.target
