--- a/ifi-streamer-tidal-connect.service
+++ b/ifi-streamer-tidal-connect.service
@@ -2,7 +2,7 @@
 Description=iFi Streamer Tidal Connect Service
 [Service]
 Restart=on-failure
-ExecStart=/usr/ifi/ifi-tidal/play.sh
+ExecStart=/usr/ifi/ifi-tidal/play
 User=root
 Group=root
 RestartSec=1
